# AudioAgent

./: .gitignore  AGENTS.md  DEFAULT_ENVIRONMENT.md  DEMO_ENVIRONMENT.md  PROJECT_MAP.md  README.md  README.zh.md  environment.yml  light_setup.sh  pred_frontend_only.txt  pred_frontend_only.txt.failures  pred_full.txt  pred_no_critic.txt  pred_no_critic.txt.failures  pred_no_critic_no_image_tools.txt  pyproject.toml  requirements.txt  setup_all_tools.sh  verify_all_tools.sh
.cursor/rules/: read-runtime-config-first.mdc
.devcontainer/: Dockerfile  devcontainer.json
audio_agent/: __init__.py  main.py
audio_agent/config/: __init__.py  settings.py
audio_agent/core/: __init__.py  constants.py  errors.py  logging.py  schemas.py  state.py
audio_agent/critic/: __init__.py  base.py  dummy_critic.py  openai_compatible_critic.py
audio_agent/examples/: __init__.py  batch_api_asr.py  demo_run.py  demo_run_api_asr.py  demo_run_api_full.py  demo_run_api_full_image_correction.py  demo_run_api_planner.py  demo_run_auto_tools.py  demo_run_real_asr.py
audio_agent/frontend/: __init__.py  base.py  dummy_frontend.py  model_frontend.py  openai_compatible_frontend.py  qwen2_audio_frontend.py  qwen3_omni_frontend.py
audio_agent/fusion/: __init__.py  base.py  default_fuser.py
audio_agent/graph/: __init__.py  builder.py  nodes.py  routing.py
audio_agent/log/: __init__.py  formatter.py  logger.py
audio_agent/planner/: __init__.py  base.py  dummy_planner.py  model_planner.py  openai_compatible_planner.py  qwen25_planner.py
audio_agent/prompts/: answer_system.md  answer_user.md  clarify_system.md  clarify_user.md  critic_history_check_system.md  critic_system.md  decide_rules.md  decide_system.md  decide_user.md  evidence_summary_system.md  evidence_summary_user.md  format_check_system.md  format_check_user.md  frontend_final_answer_system.md  frontend_final_answer_user.md  frontend_system.md  frontend_user.md  initial_prompt_system.md  initial_prompt_user.md  plan_system.md  plan_user.md  task_oriented_caption_skill.md  task_skills.yaml  verification_system.md  verification_user.md
audio_agent/tests/: __init__.py  test_audio_path.py  test_critic.py  test_frontend_model_base.py  test_graph_smoke.py  test_model_io.py  test_model_planner_base.py  test_planner_stages.py  test_qwen25_planner.py  test_qwen2_audio_frontend.py  test_qwen3_omni_frontend.py  test_registry.py  test_state.py
audio_agent/tools/: __init__.py  base.py  dummy_tools.py  executor.py  registry.py
audio_agent/tools/catalog/: README.md  __init__.py  loader.py
audio_agent/tools/catalog/_template/: README.md  config.yaml  pyproject.toml  server.py
audio_agent/tools/catalog/asr_qwen3/: README.md  config.yaml  server.py  test_env.py  test_env.sh
audio_agent/tools/catalog/diarizen/: SETUP_PROCEDURE.md  config.yaml  pyproject.toml  setup.sh  test_env.sh  test_model_load.py
audio_agent/tools/catalog/external_memory/: config.yaml  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/ffmpeg/: README.md  __init__.py  config.yaml  model.py  model.spec.yaml  pyproject.toml  server.py  setup.sh  test_env.py
audio_agent/tools/catalog/fireredasr2s/: README.md  config.yaml  pyproject.toml  server.py
audio_agent/tools/catalog/fireredvad/: README.md  model.spec.yaml  pyproject.toml  server.py  test_env.sh
audio_agent/tools/catalog/image_captioner/: config.yaml  model.py  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/image_qa/: config.yaml  model.py  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/kw_verify/: config.yaml  model.py  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/librosa/: README.md  config.yaml  model.py  model.spec.yaml  pyproject.toml  server.py  setup.sh  test_env.py
audio_agent/tools/catalog/omni_captioner/: README.md  config.yaml  model.py  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/qwen3_asr_flash/: README.md  config.yaml  model.py  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/qwen_vl_ocr/: config.yaml  model.py  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/snakers4_silero-vad/: README.md  __init__.py  model.spec.yaml  pyproject.toml  server.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/catalog/wespeaker/: __init__.py  model.py  model.spec.yaml  test_env.sh
audio_agent/tools/catalog/whisperx/: config.yaml  setup.sh  test_env.py  test_env.sh
audio_agent/tools/mcp/: __init__.py  client.py  schemas.py  server_manager.py  tool_adapter.py
audio_agent/tools/unava/asr_qwen3/: pyproject.toml  setup.sh
audio_agent/tools/unava/diarizen/: README.md  server.py  test_env.py  test_model_load.sh
audio_agent/tools/unava/fireredasr2s/: __init__.py  model.py  setup.sh  test_env.py  test_env.sh
audio_agent/tools/unava/wespeaker/: config.yaml  pyproject.toml  server.py  setup.sh
audio_agent/tools/unava/whisperx/: README.md  __init__.py  download_diarization_models.py  model.py  pyproject.toml  server.py
audio_agent/utils/: __init__.py  audio_path.py  model_downloader.py  model_io.py  prompt_io.py  skill_io.py  transcript.py  validation.py
examples/: batch_ablation_frontend_only.sh  batch_ablation_no_critic.sh  batch_ablation_no_critic_no_image_tools.sh  batch_full.sh  case1.md  case1.sh  case2.md  case2.sh  convert_ark.py
scripts/: batch_api_asr.py
tool_preparation/: AGENTS.md  README.md  SYSTEM_PROMPT.md  TOOL_INPUT_TEMPLATE.md
tool_preparation/contracts/: fixture_policy.md  minimal_validation.md  spec_validation.md
tool_preparation/playbooks/: env_uv.md  failure_taxonomy.md  model_api.md  preflight_checklist.md
tool_preparation/policies/: backend_selection.md  constitution.md  retry_and_escalation.md
tool_preparation/specs/: model_spec_template.md  wrapper_contract.md
tool_preparation/templates/: artifact_manifest.json  model.spec.yaml  spec_validation.json  verdict.json
(+7 files in other folders)
