[project]
name = "template-tool"
version = "1.0.0"
description = "Template for creating new MCP tools"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

# Define your tool's dependencies here
# Keep this minimal - only what the tool actually needs
dependencies = [
    # Example dependencies (remove and replace with actual needs):
    # "requests>=2.28.0",
    # "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
]

# Build system (required by PEP 518)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# uv-specific configuration
[tool.uv]
# Allow prerelease versions if needed
# allow-prereleases = true

# Dev dependencies managed by uv
[tool.uv.pip]
# Custom index URL if needed
# index-url = "https://pypi.org/simple"
