[project]
name = "ffmpeg-tool"
version = "2.0.0"
description = "Comprehensive FFmpeg audio processing tool - 56+ tools for format conversion, EQ, effects, analysis, and advanced processing"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "model"]
