[project]
name = "image-qa-tool"
version = "1.0.0"
description = "API-based image question answering using an OpenAI-compatible vision model"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "model"]
