[project]
name = "snakers4-silero-vad-tool"
version = "1.0.0"
description = "Silero VAD tool for the Audio Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "torch>=2.0,<2.3",
    "torchaudio>=2.0,<2.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "model"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
